syntax = "proto3";
option java_package = "com.example.departmentapi";

message UserRequest {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
}

message UserResponse {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string gender = 4;
  int32 age = 5;
}

service UserService {
  rpc getUser(UserRequest) returns (UserResponse);
}
